Compiler/build/lib/frontend/parser.output
Grammar

    0 $accept: PROG $end

    1 PROG: MAINMETHOD CLASSDECLLIST

    2 MAINMETHOD: PUBLIC INT MAIN '(' ')' '{' VARDECLLIST STMLIST '}'

    3 TYPE: CLASS ID
    4     | INT
    5     | INT '[' ']'
    6     | INT '[' NUMBER ']'

    7 VARDECLLIST: ε
    8            | VARDECL VARDECLLIST

    9 VARDECL: TYPE ID ';'
   10        | TYPE ID '=' '{' NUMBERLIST '}' ';'

   11 NUMBER: NONNEGATIVEINT
   12       | MINUS NONNEGATIVEINT

   13 NUMBERLIST: ε
   14           | NUMBER NUMBERREST

   15 NUMBERREST: ε
   16           | ',' NUMBER NUMBERREST

   17 CLASSDECLLIST: ε
   18              | CLASSDECL CLASSDECLLIST

   19 CLASSDECL: PUBLIC CLASS ID '{' VARDECLLIST METHODDECLLIST '}'
   20          | PUBLIC CLASS ID EXTENDS ID '{' VARDECLLIST METHODDECLLIST '}'

   21 METHODDECLLIST: ε
   22               | METHODDECL METHODDECLLIST

   23 METHODDECL: PUBLIC TYPE ID '(' FORMALLIST ')' '{' VARDECLLIST STMLIST '}'

   24 FORMALLIST: ε
   25           | TYPE ID FORMALREST

   26 FORMALREST: ε
   27           | ',' TYPE ID FORMALREST

   28 STMLIST: ε
   29        | STM STMLIST

   30 STM: '{' STMLIST '}'
   31    | IF '(' EXP ')' STM ELSE STM
   32    | IF '(' EXP ')' STM
   33    | WHILE '(' EXP ')' STM
   34    | WHILE '(' EXP ')' ';'
   35    | EXP '=' EXP ';'
   36    | EXP '.' ID '(' EXPLIST ')' ';'
   37    | CONTINUE ';'
   38    | BREAK ';'
   39    | RETURN EXP ';'
   40    | PUTINT '(' EXP ')' ';'
   41    | PUTCH '(' EXP ')' ';'
   42    | PUTARRAY '(' EXP ',' EXP ')' ';'
   43    | STARTTIME '(' ')' ';'
   44    | STOPTIME '(' ')' ';'

   45 EXP: EXP ADD EXP
   46    | EXP MINUS EXP
   47    | EXP TIMES EXP
   48    | EXP DIVIDE EXP
   49    | EXP OR EXP
   50    | EXP AND EXP
   51    | EXP LT EXP
   52    | EXP LE EXP
   53    | EXP GT EXP
   54    | EXP GE EXP
   55    | EXP EQ EXP
   56    | EXP NE EXP
   57    | EXP '[' EXP ']'
   58    | EXP '.' ID '(' EXPLIST ')'
   59    | EXP '.' ID
   60    | NONNEGATIVEINT
   61    | LENGTH '(' EXP ')'
   62    | THIS
   63    | '!' EXP
   64    | MINUS EXP
   65    | '(' EXP ')'
   66    | NEW INT '[' EXP ']'
   67    | NEW ID '(' ')'
   68    | GETINT '(' ')'
   69    | GETCH '(' ')'
   70    | GETARRAY '(' EXP ')'
   71    | ID

   72 EXPLIST: ε
   73        | EXP EXPREST

   74 EXPREST: ε
   75        | ',' EXP EXPREST

   76 ID: IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 63
    '(' (40) 2 23 31 32 33 34 36 40 41 42 43 44 58 61 65 67 68 69 70
    ')' (41) 2 23 31 32 33 34 36 40 41 42 43 44 58 61 65 67 68 69 70
    ',' (44) 16 27 42 75
    '.' (46) 36 58 59
    ';' (59) 9 10 34 35 36 37 38 39 40 41 42 43 44
    '=' (61) 10 35
    '[' (91) 5 6 57 66
    ']' (93) 5 6 57 66
    '{' (123) 2 10 19 20 23 30
    '}' (125) 2 10 19 20 23 30
    error (256)
    PUBLIC (258) 2 19 20 23
    INT (259) 2 4 5 6 66
    MAIN (260) 2
    CLASS (261) 3 19 20
    EXTENDS (262) 20
    IF (263) 31 32
    ELSE (264) 31
    WHILE (265) 33 34
    CONTINUE (266) 37
    BREAK (267) 38
    RETURN (268) 39
    PUTINT (269) 40
    PUTCH (270) 41
    PUTARRAY (271) 42
    STARTTIME (272) 43
    STOPTIME (273) 44
    THIS (274) 62
    LENGTH (275) 61
    NEW (276) 66 67
    GETINT (277) 68
    GETCH (278) 69
    GETARRAY (279) 70
    NONNEGATIVEINT <i> (280) 11 12 60
    IDENTIFIER <s> (281) 76
    ADD (282) 45
    MINUS (283) 12 46 64
    TIMES (284) 47
    DIVIDE (285) 48
    EQ (286) 55
    NE (287) 56
    LT (288) 51
    LE (289) 52
    GT (290) 53
    GE (291) 54
    AND (292) 50
    OR (293) 49
    UMINUS (294)


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    PROG <program> (52)
        on left: 1
        on right: 0
    MAINMETHOD <mainMethod> (53)
        on left: 2
        on right: 1
    TYPE <type> (54)
        on left: 3 4 5 6
        on right: 9 10 23 25 27
    VARDECLLIST <varDeclList> (55)
        on left: 7 8
        on right: 2 8 19 20 23
    VARDECL <varDecl> (56)
        on left: 9 10
        on right: 8
    NUMBER <intExp> (57)
        on left: 11 12
        on right: 6 14 16
    NUMBERLIST <intExpList> (58)
        on left: 13 14
        on right: 10
    NUMBERREST <intExpList> (59)
        on left: 15 16
        on right: 14 16
    CLASSDECLLIST <classDeclList> (60)
        on left: 17 18
        on right: 1 18
    CLASSDECL <classDecl> (61)
        on left: 19 20
        on right: 18
    METHODDECLLIST <methodDeclList> (62)
        on left: 21 22
        on right: 19 20 22
    METHODDECL <methodDecl> (63)
        on left: 23
        on right: 22
    FORMALLIST <formalList> (64)
        on left: 24 25
        on right: 23
    FORMALREST <formalList> (65)
        on left: 26 27
        on right: 25 27
    STMLIST <stmList> (66)
        on left: 28 29
        on right: 2 23 29 30
    STM <stm> (67)
        on left: 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44
        on right: 29 31 32 33
    EXP <exp> (68)
        on left: 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
        on right: 31 32 33 34 35 36 39 40 41 42 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 61 63 64 65 66 70 73 75
    EXPLIST <expList> (69)
        on left: 72 73
        on right: 36 58
    EXPREST <expList> (70)
        on left: 74 75
        on right: 73 75
    ID <idExp> (71)
        on left: 76
        on right: 3 9 10 19 20 23 25 27 36 58 59 67 71


State 0

    0 $accept: • PROG $end

    PUBLIC  shift, and go to state 1

    PROG        go to state 2
    MAINMETHOD  go to state 3


State 1

    2 MAINMETHOD: PUBLIC • INT MAIN '(' ')' '{' VARDECLLIST STMLIST '}'

    INT  shift, and go to state 4


State 2

    0 $accept: PROG • $end

    $end  shift, and go to state 5


State 3

    1 PROG: MAINMETHOD • CLASSDECLLIST

    PUBLIC  shift, and go to state 6

    $default  reduce using rule 17 (CLASSDECLLIST)

    CLASSDECLLIST  go to state 7
    CLASSDECL      go to state 8


State 4

    2 MAINMETHOD: PUBLIC INT • MAIN '(' ')' '{' VARDECLLIST STMLIST '}'

    MAIN  shift, and go to state 9


State 5

    0 $accept: PROG $end •

    $default  accept


State 6

   19 CLASSDECL: PUBLIC • CLASS ID '{' VARDECLLIST METHODDECLLIST '}'
   20          | PUBLIC • CLASS ID EXTENDS ID '{' VARDECLLIST METHODDECLLIST '}'

    CLASS  shift, and go to state 10


State 7

    1 PROG: MAINMETHOD CLASSDECLLIST •

    $default  reduce using rule 1 (PROG)


State 8

   18 CLASSDECLLIST: CLASSDECL • CLASSDECLLIST

    PUBLIC  shift, and go to state 6

    $default  reduce using rule 17 (CLASSDECLLIST)

    CLASSDECLLIST  go to state 11
    CLASSDECL      go to state 8


State 9

    2 MAINMETHOD: PUBLIC INT MAIN • '(' ')' '{' VARDECLLIST STMLIST '}'

    '('  shift, and go to state 12


State 10

   19 CLASSDECL: PUBLIC CLASS • ID '{' VARDECLLIST METHODDECLLIST '}'
   20          | PUBLIC CLASS • ID EXTENDS ID '{' VARDECLLIST METHODDECLLIST '}'

    IDENTIFIER  shift, and go to state 13

    ID  go to state 14


State 11

   18 CLASSDECLLIST: CLASSDECL CLASSDECLLIST •

    $default  reduce using rule 18 (CLASSDECLLIST)


State 12

    2 MAINMETHOD: PUBLIC INT MAIN '(' • ')' '{' VARDECLLIST STMLIST '}'

    ')'  shift, and go to state 15


State 13

   76 ID: IDENTIFIER •

    $default  reduce using rule 76 (ID)


State 14

   19 CLASSDECL: PUBLIC CLASS ID • '{' VARDECLLIST METHODDECLLIST '}'
   20          | PUBLIC CLASS ID • EXTENDS ID '{' VARDECLLIST METHODDECLLIST '}'

    EXTENDS  shift, and go to state 16
    '{'      shift, and go to state 17


State 15

    2 MAINMETHOD: PUBLIC INT MAIN '(' ')' • '{' VARDECLLIST STMLIST '}'

    '{'  shift, and go to state 18


State 16

   20 CLASSDECL: PUBLIC CLASS ID EXTENDS • ID '{' VARDECLLIST METHODDECLLIST '}'

    IDENTIFIER  shift, and go to state 13

    ID  go to state 19


State 17

   19 CLASSDECL: PUBLIC CLASS ID '{' • VARDECLLIST METHODDECLLIST '}'

    INT    shift, and go to state 20
    CLASS  shift, and go to state 21

    $default  reduce using rule 7 (VARDECLLIST)

    TYPE         go to state 22
    VARDECLLIST  go to state 23
    VARDECL      go to state 24


State 18

    2 MAINMETHOD: PUBLIC INT MAIN '(' ')' '{' • VARDECLLIST STMLIST '}'

    INT    shift, and go to state 20
    CLASS  shift, and go to state 21

    $default  reduce using rule 7 (VARDECLLIST)

    TYPE         go to state 22
    VARDECLLIST  go to state 25
    VARDECL      go to state 24


State 19

   20 CLASSDECL: PUBLIC CLASS ID EXTENDS ID • '{' VARDECLLIST METHODDECLLIST '}'

    '{'  shift, and go to state 26


State 20

    4 TYPE: INT •
    5     | INT • '[' ']'
    6     | INT • '[' NUMBER ']'

    '['  shift, and go to state 27

    $default  reduce using rule 4 (TYPE)


State 21

    3 TYPE: CLASS • ID

    IDENTIFIER  shift, and go to state 13

    ID  go to state 28


State 22

    9 VARDECL: TYPE • ID ';'
   10        | TYPE • ID '=' '{' NUMBERLIST '}' ';'

    IDENTIFIER  shift, and go to state 13

    ID  go to state 29


State 23

   19 CLASSDECL: PUBLIC CLASS ID '{' VARDECLLIST • METHODDECLLIST '}'

    PUBLIC  shift, and go to state 30

    $default  reduce using rule 21 (METHODDECLLIST)

    METHODDECLLIST  go to state 31
    METHODDECL      go to state 32


State 24

    8 VARDECLLIST: VARDECL • VARDECLLIST

    INT    shift, and go to state 20
    CLASS  shift, and go to state 21

    $default  reduce using rule 7 (VARDECLLIST)

    TYPE         go to state 22
    VARDECLLIST  go to state 33
    VARDECL      go to state 24


State 25

    2 MAINMETHOD: PUBLIC INT MAIN '(' ')' '{' VARDECLLIST • STMLIST '}'

    IF              shift, and go to state 34
    WHILE           shift, and go to state 35
    CONTINUE        shift, and go to state 36
    BREAK           shift, and go to state 37
    RETURN          shift, and go to state 38
    PUTINT          shift, and go to state 39
    PUTCH           shift, and go to state 40
    PUTARRAY        shift, and go to state 41
    STARTTIME       shift, and go to state 42
    STOPTIME        shift, and go to state 43
    THIS            shift, and go to state 44
    LENGTH          shift, and go to state 45
    NEW             shift, and go to state 46
    GETINT          shift, and go to state 47
    GETCH           shift, and go to state 48
    GETARRAY        shift, and go to state 49
    NONNEGATIVEINT  shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    '('             shift, and go to state 51
    '{'             shift, and go to state 52
    MINUS           shift, and go to state 53
    '!'             shift, and go to state 54

    $default  reduce using rule 28 (STMLIST)

    STMLIST  go to state 55
    STM      go to state 56
    EXP      go to state 57
    ID       go to state 58


State 26

   20 CLASSDECL: PUBLIC CLASS ID EXTENDS ID '{' • VARDECLLIST METHODDECLLIST '}'

    INT    shift, and go to state 20
    CLASS  shift, and go to state 21

    $default  reduce using rule 7 (VARDECLLIST)

    TYPE         go to state 22
    VARDECLLIST  go to state 59
    VARDECL      go to state 24


State 27

    5 TYPE: INT '[' • ']'
    6     | INT '[' • NUMBER ']'

    NONNEGATIVEINT  shift, and go to state 60
    ']'             shift, and go to state 61
    MINUS           shift, and go to state 62

    NUMBER  go to state 63


State 28

    3 TYPE: CLASS ID •

    $default  reduce using rule 3 (TYPE)


State 29

    9 VARDECL: TYPE ID • ';'
   10        | TYPE ID • '=' '{' NUMBERLIST '}' ';'

    '='  shift, and go to state 64
    ';'  shift, and go to state 65


State 30

   23 METHODDECL: PUBLIC • TYPE ID '(' FORMALLIST ')' '{' VARDECLLIST STMLIST '}'

    INT    shift, and go to state 20
    CLASS  shift, and go to state 21

    TYPE  go to state 66


State 31

   19 CLASSDECL: PUBLIC CLASS ID '{' VARDECLLIST METHODDECLLIST • '}'

    '}'  shift, and go to state 67


State 32

   22 METHODDECLLIST: METHODDECL • METHODDECLLIST

    PUBLIC  shift, and go to state 30

    $default  reduce using rule 21 (METHODDECLLIST)

    METHODDECLLIST  go to state 68
    METHODDECL      go to state 32


State 33

    8 VARDECLLIST: VARDECL VARDECLLIST •

    $default  reduce using rule 8 (VARDECLLIST)


State 34

   31 STM: IF • '(' EXP ')' STM ELSE STM
   32    | IF • '(' EXP ')' STM

    '('  shift, and go to state 69


State 35

   33 STM: WHILE • '(' EXP ')' STM
   34    | WHILE • '(' EXP ')' ';'

    '('  shift, and go to state 70


State 36

   37 STM: CONTINUE • ';'

    ';'  shift, and go to state 71


State 37

   38 STM: BREAK • ';'

    ';'  shift, and go to state 72


State 38

   39 STM: RETURN • EXP ';'

    THIS            shift, and go to state 44
    LENGTH          shift, and go to state 45
    NEW             shift, and go to state 46
    GETINT          shift, and go to state 47
    GETCH           shift, and go to state 48
    GETARRAY        shift, and go to state 49
    NONNEGATIVEINT  shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    '('             shift, and go to state 51
    MINUS           shift, and go to state 53
    '!'             shift, and go to state 54

    EXP  go to state 73
    ID   go to state 58


State 39

   40 STM: PUTINT • '(' EXP ')' ';'

    '('  shift, and go to state 74


State 40

   41 STM: PUTCH • '(' EXP ')' ';'

    '('  shift, and go to state 75


State 41

   42 STM: PUTARRAY • '(' EXP ',' EXP ')' ';'

    '('  shift, and go to state 76


State 42

   43 STM: STARTTIME • '(' ')' ';'

    '('  shift, and go to state 77


State 43

   44 STM: STOPTIME • '(' ')' ';'

    '('  shift, and go to state 78


State 44

   62 EXP: THIS •

    $default  reduce using rule 62 (EXP)


State 45

   61 EXP: LENGTH • '(' EXP ')'

    '('  shift, and go to state 79


State 46

   66 EXP: NEW • INT '[' EXP ']'
   67    | NEW • ID '(' ')'

    INT         shift, and go to state 80
    IDENTIFIER  shift, and go to state 13

    ID  go to state 81


State 47

   68 EXP: GETINT • '(' ')'

    '('  shift, and go to state 82


State 48

   69 EXP: GETCH • '(' ')'

    '('  shift, and go to state 83


State 49

   70 EXP: GETARRAY • '(' EXP ')'

    '('  shift, and go to state 84


State 50

   60 EXP: NONNEGATIVEINT •

    $default  reduce using rule 60 (EXP)


State 51

   65 EXP: '(' • EXP ')'

    THIS            shift, and go to state 44
    LENGTH          shift, and go to state 45
    NEW             shift, and go to state 46
    GETINT          shift, and go to state 47
    GETCH           shift, and go to state 48
    GETARRAY        shift, and go to state 49
    NONNEGATIVEINT  shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    '('             shift, and go to state 51
    MINUS           shift, and go to state 53
    '!'             shift, and go to state 54

    EXP  go to state 85
    ID   go to state 58


State 52

   30 STM: '{' • STMLIST '}'

    IF              shift, and go to state 34
    WHILE           shift, and go to state 35
    CONTINUE        shift, and go to state 36
    BREAK           shift, and go to state 37
    RETURN          shift, and go to state 38
    PUTINT          shift, and go to state 39
    PUTCH           shift, and go to state 40
    PUTARRAY        shift, and go to state 41
    STARTTIME       shift, and go to state 42
    STOPTIME        shift, and go to state 43
    THIS            shift, and go to state 44
    LENGTH          shift, and go to state 45
    NEW             shift, and go to state 46
    GETINT          shift, and go to state 47
    GETCH           shift, and go to state 48
    GETARRAY        shift, and go to state 49
    NONNEGATIVEINT  shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    '('             shift, and go to state 51
    '{'             shift, and go to state 52
    MINUS           shift, and go to state 53
    '!'             shift, and go to state 54

    $default  reduce using rule 28 (STMLIST)

    STMLIST  go to state 86
    STM      go to state 56
    EXP      go to state 57
    ID       go to state 58


State 53

   64 EXP: MINUS • EXP

    THIS            shift, and go to state 44
    LENGTH          shift, and go to state 45
    NEW             shift, and go to state 46
    GETINT          shift, and go to state 47
    GETCH           shift, and go to state 48
    GETARRAY        shift, and go to state 49
    NONNEGATIVEINT  shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    '('             shift, and go to state 51
    MINUS           shift, and go to state 53
    '!'             shift, and go to state 54

    EXP  go to state 87
    ID   go to state 58


State 54

   63 EXP: '!' • EXP

    THIS            shift, and go to state 44
    LENGTH          shift, and go to state 45
    NEW             shift, and go to state 46
    GETINT          shift, and go to state 47
    GETCH           shift, and go to state 48
    GETARRAY        shift, and go to state 49
    NONNEGATIVEINT  shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    '('             shift, and go to state 51
    MINUS           shift, and go to state 53
    '!'             shift, and go to state 54

    EXP  go to state 88
    ID   go to state 58


State 55

    2 MAINMETHOD: PUBLIC INT MAIN '(' ')' '{' VARDECLLIST STMLIST • '}'

    '}'  shift, and go to state 89


State 56

   29 STMLIST: STM • STMLIST

    IF              shift, and go to state 34
    WHILE           shift, and go to state 35
    CONTINUE        shift, and go to state 36
    BREAK           shift, and go to state 37
    RETURN          shift, and go to state 38
    PUTINT          shift, and go to state 39
    PUTCH           shift, and go to state 40
    PUTARRAY        shift, and go to state 41
    STARTTIME       shift, and go to state 42
    STOPTIME        shift, and go to state 43
    THIS            shift, and go to state 44
    LENGTH          shift, and go to state 45
    NEW             shift, and go to state 46
    GETINT          shift, and go to state 47
    GETCH           shift, and go to state 48
    GETARRAY        shift, and go to state 49
    NONNEGATIVEINT  shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    '('             shift, and go to state 51
    '{'             shift, and go to state 52
    MINUS           shift, and go to state 53
    '!'             shift, and go to state 54

    $default  reduce using rule 28 (STMLIST)

    STMLIST  go to state 90
    STM      go to state 56
    EXP      go to state 57
    ID       go to state 58


State 57

   35 STM: EXP • '=' EXP ';'
   36    | EXP • '.' ID '(' EXPLIST ')' ';'
   45 EXP: EXP • ADD EXP
   46    | EXP • MINUS EXP
   47    | EXP • TIMES EXP
   48    | EXP • DIVIDE EXP
   49    | EXP • OR EXP
   50    | EXP • AND EXP
   51    | EXP • LT EXP
   52    | EXP • LE EXP
   53    | EXP • GT EXP
   54    | EXP • GE EXP
   55    | EXP • EQ EXP
   56    | EXP • NE EXP
   57    | EXP • '[' EXP ']'
   58    | EXP • '.' ID '(' EXPLIST ')'
   59    | EXP • '.' ID

    '['     shift, and go to state 91
    '='     shift, and go to state 92
    '.'     shift, and go to state 93
    ADD     shift, and go to state 94
    MINUS   shift, and go to state 95
    TIMES   shift, and go to state 96
    DIVIDE  shift, and go to state 97
    EQ      shift, and go to state 98
    NE      shift, and go to state 99
    LT      shift, and go to state 100
    LE      shift, and go to state 101
    GT      shift, and go to state 102
    GE      shift, and go to state 103
    AND     shift, and go to state 104
    OR      shift, and go to state 105


State 58

   71 EXP: ID •

    $default  reduce using rule 71 (EXP)


State 59

   20 CLASSDECL: PUBLIC CLASS ID EXTENDS ID '{' VARDECLLIST • METHODDECLLIST '}'

    PUBLIC  shift, and go to state 30

    $default  reduce using rule 21 (METHODDECLLIST)

    METHODDECLLIST  go to state 106
    METHODDECL      go to state 32


State 60

   11 NUMBER: NONNEGATIVEINT •

    $default  reduce using rule 11 (NUMBER)


State 61

    5 TYPE: INT '[' ']' •

    $default  reduce using rule 5 (TYPE)


State 62

   12 NUMBER: MINUS • NONNEGATIVEINT

    NONNEGATIVEINT  shift, and go to state 107


State 63

    6 TYPE: INT '[' NUMBER • ']'

    ']'  shift, and go to state 108


State 64

   10 VARDECL: TYPE ID '=' • '{' NUMBERLIST '}' ';'

    '{'  shift, and go to state 109


State 65

    9 VARDECL: TYPE ID ';' •

    $default  reduce using rule 9 (VARDECL)


State 66

   23 METHODDECL: PUBLIC TYPE • ID '(' FORMALLIST ')' '{' VARDECLLIST STMLIST '}'

    IDENTIFIER  shift, and go to state 13

    ID  go to state 110


State 67

   19 CLASSDECL: PUBLIC CLASS ID '{' VARDECLLIST METHODDECLLIST '}' •

    $default  reduce using rule 19 (CLASSDECL)


State 68

   22 METHODDECLLIST: METHODDECL METHODDECLLIST •

    $default  reduce using rule 22 (METHODDECLLIST)


State 69

   31 STM: IF '(' • EXP ')' STM ELSE STM
   32    | IF '(' • EXP ')' STM

    THIS            shift, and go to state 44
    LENGTH          shift, and go to state 45
    NEW             shift, and go to state 46
    GETINT          shift, and go to state 47
    GETCH           shift, and go to state 48
    GETARRAY        shift, and go to state 49
    NONNEGATIVEINT  shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    '('             shift, and go to state 51
    MINUS           shift, and go to state 53
    '!'             shift, and go to state 54

    EXP  go to state 111
    ID   go to state 58


State 70

   33 STM: WHILE '(' • EXP ')' STM
   34    | WHILE '(' • EXP ')' ';'

    THIS            shift, and go to state 44
    LENGTH          shift, and go to state 45
    NEW             shift, and go to state 46
    GETINT          shift, and go to state 47
    GETCH           shift, and go to state 48
    GETARRAY        shift, and go to state 49
    NONNEGATIVEINT  shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    '('             shift, and go to state 51
    MINUS           shift, and go to state 53
    '!'             shift, and go to state 54

    EXP  go to state 112
    ID   go to state 58


State 71

   37 STM: CONTINUE ';' •

    $default  reduce using rule 37 (STM)


State 72

   38 STM: BREAK ';' •

    $default  reduce using rule 38 (STM)


State 73

   39 STM: RETURN EXP • ';'
   45 EXP: EXP • ADD EXP
   46    | EXP • MINUS EXP
   47    | EXP • TIMES EXP
   48    | EXP • DIVIDE EXP
   49    | EXP • OR EXP
   50    | EXP • AND EXP
   51    | EXP • LT EXP
   52    | EXP • LE EXP
   53    | EXP • GT EXP
   54    | EXP • GE EXP
   55    | EXP • EQ EXP
   56    | EXP • NE EXP
   57    | EXP • '[' EXP ']'
   58    | EXP • '.' ID '(' EXPLIST ')'
   59    | EXP • '.' ID

    '['     shift, and go to state 91
    ';'     shift, and go to state 113
    '.'     shift, and go to state 114
    ADD     shift, and go to state 94
    MINUS   shift, and go to state 95
    TIMES   shift, and go to state 96
    DIVIDE  shift, and go to state 97
    EQ      shift, and go to state 98
    NE      shift, and go to state 99
    LT      shift, and go to state 100
    LE      shift, and go to state 101
    GT      shift, and go to state 102
    GE      shift, and go to state 103
    AND     shift, and go to state 104
    OR      shift, and go to state 105


State 74

   40 STM: PUTINT '(' • EXP ')' ';'

    THIS            shift, and go to state 44
    LENGTH          shift, and go to state 45
    NEW             shift, and go to state 46
    GETINT          shift, and go to state 47
    GETCH           shift, and go to state 48
    GETARRAY        shift, and go to state 49
    NONNEGATIVEINT  shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    '('             shift, and go to state 51
    MINUS           shift, and go to state 53
    '!'             shift, and go to state 54

    EXP  go to state 115
    ID   go to state 58


State 75

   41 STM: PUTCH '(' • EXP ')' ';'

    THIS            shift, and go to state 44
    LENGTH          shift, and go to state 45
    NEW             shift, and go to state 46
    GETINT          shift, and go to state 47
    GETCH           shift, and go to state 48
    GETARRAY        shift, and go to state 49
    NONNEGATIVEINT  shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    '('             shift, and go to state 51
    MINUS           shift, and go to state 53
    '!'             shift, and go to state 54

    EXP  go to state 116
    ID   go to state 58


State 76

   42 STM: PUTARRAY '(' • EXP ',' EXP ')' ';'

    THIS            shift, and go to state 44
    LENGTH          shift, and go to state 45
    NEW             shift, and go to state 46
    GETINT          shift, and go to state 47
    GETCH           shift, and go to state 48
    GETARRAY        shift, and go to state 49
    NONNEGATIVEINT  shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    '('             shift, and go to state 51
    MINUS           shift, and go to state 53
    '!'             shift, and go to state 54

    EXP  go to state 117
    ID   go to state 58


State 77

   43 STM: STARTTIME '(' • ')' ';'

    ')'  shift, and go to state 118


State 78

   44 STM: STOPTIME '(' • ')' ';'

    ')'  shift, and go to state 119


State 79

   61 EXP: LENGTH '(' • EXP ')'

    THIS            shift, and go to state 44
    LENGTH          shift, and go to state 45
    NEW             shift, and go to state 46
    GETINT          shift, and go to state 47
    GETCH           shift, and go to state 48
    GETARRAY        shift, and go to state 49
    NONNEGATIVEINT  shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    '('             shift, and go to state 51
    MINUS           shift, and go to state 53
    '!'             shift, and go to state 54

    EXP  go to state 120
    ID   go to state 58


State 80

   66 EXP: NEW INT • '[' EXP ']'

    '['  shift, and go to state 121


State 81

   67 EXP: NEW ID • '(' ')'

    '('  shift, and go to state 122


State 82

   68 EXP: GETINT '(' • ')'

    ')'  shift, and go to state 123


State 83

   69 EXP: GETCH '(' • ')'

    ')'  shift, and go to state 124


State 84

   70 EXP: GETARRAY '(' • EXP ')'

    THIS            shift, and go to state 44
    LENGTH          shift, and go to state 45
    NEW             shift, and go to state 46
    GETINT          shift, and go to state 47
    GETCH           shift, and go to state 48
    GETARRAY        shift, and go to state 49
    NONNEGATIVEINT  shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    '('             shift, and go to state 51
    MINUS           shift, and go to state 53
    '!'             shift, and go to state 54

    EXP  go to state 125
    ID   go to state 58


State 85

   45 EXP: EXP • ADD EXP
   46    | EXP • MINUS EXP
   47    | EXP • TIMES EXP
   48    | EXP • DIVIDE EXP
   49    | EXP • OR EXP
   50    | EXP • AND EXP
   51    | EXP • LT EXP
   52    | EXP • LE EXP
   53    | EXP • GT EXP
   54    | EXP • GE EXP
   55    | EXP • EQ EXP
   56    | EXP • NE EXP
   57    | EXP • '[' EXP ']'
   58    | EXP • '.' ID '(' EXPLIST ')'
   59    | EXP • '.' ID
   65    | '(' EXP • ')'

    ')'     shift, and go to state 126
    '['     shift, and go to state 91
    '.'     shift, and go to state 114
    ADD     shift, and go to state 94
    MINUS   shift, and go to state 95
    TIMES   shift, and go to state 96
    DIVIDE  shift, and go to state 97
    EQ      shift, and go to state 98
    NE      shift, and go to state 99
    LT      shift, and go to state 100
    LE      shift, and go to state 101
    GT      shift, and go to state 102
    GE      shift, and go to state 103
    AND     shift, and go to state 104
    OR      shift, and go to state 105


State 86

   30 STM: '{' STMLIST • '}'

    '}'  shift, and go to state 127


State 87

   45 EXP: EXP • ADD EXP
   46    | EXP • MINUS EXP
   47    | EXP • TIMES EXP
   48    | EXP • DIVIDE EXP
   49    | EXP • OR EXP
   50    | EXP • AND EXP
   51    | EXP • LT EXP
   52    | EXP • LE EXP
   53    | EXP • GT EXP
   54    | EXP • GE EXP
   55    | EXP • EQ EXP
   56    | EXP • NE EXP
   57    | EXP • '[' EXP ']'
   58    | EXP • '.' ID '(' EXPLIST ')'
   59    | EXP • '.' ID
   64    | MINUS EXP •

    '['  shift, and go to state 91
    '.'  shift, and go to state 114

    $default  reduce using rule 64 (EXP)


State 88

   45 EXP: EXP • ADD EXP
   46    | EXP • MINUS EXP
   47    | EXP • TIMES EXP
   48    | EXP • DIVIDE EXP
   49    | EXP • OR EXP
   50    | EXP • AND EXP
   51    | EXP • LT EXP
   52    | EXP • LE EXP
   53    | EXP • GT EXP
   54    | EXP • GE EXP
   55    | EXP • EQ EXP
   56    | EXP • NE EXP
   57    | EXP • '[' EXP ']'
   58    | EXP • '.' ID '(' EXPLIST ')'
   59    | EXP • '.' ID
   63    | '!' EXP •

    '['  shift, and go to state 91
    '.'  shift, and go to state 114

    $default  reduce using rule 63 (EXP)


State 89

    2 MAINMETHOD: PUBLIC INT MAIN '(' ')' '{' VARDECLLIST STMLIST '}' •

    $default  reduce using rule 2 (MAINMETHOD)


State 90

   29 STMLIST: STM STMLIST •

    $default  reduce using rule 29 (STMLIST)


State 91

   57 EXP: EXP '[' • EXP ']'

    THIS            shift, and go to state 44
    LENGTH          shift, and go to state 45
    NEW             shift, and go to state 46
    GETINT          shift, and go to state 47
    GETCH           shift, and go to state 48
    GETARRAY        shift, and go to state 49
    NONNEGATIVEINT  shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    '('             shift, and go to state 51
    MINUS           shift, and go to state 53
    '!'             shift, and go to state 54

    EXP  go to state 128
    ID   go to state 58


State 92

   35 STM: EXP '=' • EXP ';'

    THIS            shift, and go to state 44
    LENGTH          shift, and go to state 45
    NEW             shift, and go to state 46
    GETINT          shift, and go to state 47
    GETCH           shift, and go to state 48
    GETARRAY        shift, and go to state 49
    NONNEGATIVEINT  shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    '('             shift, and go to state 51
    MINUS           shift, and go to state 53
    '!'             shift, and go to state 54

    EXP  go to state 129
    ID   go to state 58


State 93

   36 STM: EXP '.' • ID '(' EXPLIST ')' ';'
   58 EXP: EXP '.' • ID '(' EXPLIST ')'
   59    | EXP '.' • ID

    IDENTIFIER  shift, and go to state 13

    ID  go to state 130


State 94

   45 EXP: EXP ADD • EXP

    THIS            shift, and go to state 44
    LENGTH          shift, and go to state 45
    NEW             shift, and go to state 46
    GETINT          shift, and go to state 47
    GETCH           shift, and go to state 48
    GETARRAY        shift, and go to state 49
    NONNEGATIVEINT  shift, and go to state 50
    IDENTIFIER      shift, and go to state 13
    '('             shift, and go to state 51
    MINUS           shift, and go to state 53
    '!'             shift, and go to state 54

    EXP  go to state 131
    ID   go to state 58


State 95

   46 EXP: EXP MINUS • EXP
